Harden crawler-processor pipeline and runtime config